# spimex_api

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini
src/: __main__.py  config.py  main.py
src/api/v1/handlers/: dynamics.py  last_trading_dates.py  trading_results.py
src/api/v1/services/: trade_services.py
src/cache/: decorator.py  decorators.py  redis_client.py
src/database/: db.py
src/models/: trade_result.py
src/schemas/: filter.py  response.py  trading_date.py  trading_result.py
src/tasks/: scheduler.py
src/utils/: custom_types.py
tests/: conftest.py  utils.py
tests/fixtures/: test_cases.py
tests/fixtures/postgres/: trade_results.py
tests/unit/api/v1/handlers/: test_get.py  test_last_trading_dates.py
